Fix submit button on Safari
Fixed the submit button not having the correct colors on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,8 @@ body {
     border-left: 0;
     padding: 0;
     width: 4em;
+    background-color: #efefef;
+    border-color: black;
 }
 
 .zipCodeInput {
@@ -194,6 +196,7 @@ body {
     border: 0.1em solid;
     padding: 0;
     outline: none;
+    border-color: black;
 }
 
 @media screen and (max-width:991px) {
